Tyroneworks on some styling issues brought up by Herman, namely teh H1 and centering of footer copyright and removal of featured-wrap on mobile res query

--- a/htdocs/wp-content/themes/whitelight/css/layout.less
+++ b/htdocs/wp-content/themes/whitelight/css/layout.less
@@ -66,6 +66,7 @@ INDEX
 /* Only apply to iPad portrait and up */
 @media only screen and (min-width: 768px) {
 
+        
 	/* 1. TOP NAVIGATION */
 	#top {
 		background: @bg_dark;
@@ -332,6 +333,7 @@ INDEX
 		.single-portfolio-gallery  { float: right; width: 73.95%; /* 710 / 960 = 0.7395 */ }
 	}
 	/* 7. FOOTER WIDGETS */
+        .centered-on-mobile{}
 	#footer-widgets {
 		.block { margin-right:2.08%; /* 20 / 960 = 0.0208 */ float: left; }
 		&.col-1 {
